--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div id="canvas">
-        <div id="torture_room"></div>
+        <div id="torture_room" class="parte">
+            <div id="cuchilla"></div>
+        </div>
+        <div id="mejoras" class="parte">
+            <button id="crear_cuchilla" class="btn">+</button>
+        </div>
     </div>
 </body>
 </html>
