--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <div id="canvas">
         <div id="torture_room" class="parte">
             <div id="circulo_cuchilla"></div>
+            <div id="furry" class="uno"></div>
+            <div id="cuchillo" class="lejos"></div>
         </div>
         <div id="mejoras" class="parte">
             <button id="add_cuchilla" class="btn">Añadir Cuchilla(10 euros)</button>
@@ -18,6 +20,7 @@
         <div id="estadisticas" class="parte">
             <div id="dinero" class="estadistica">Dinero: 0</div>
             <div id="dps" class="estadistica">DPS: 0</div>
+            <div id="golpes" class="estadistica">Golpes: 0</div>
         </div>
     </div>
     <script src="assets/cuchilla.js"></script>
