--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,15 @@
             <div id="circulo_cuchilla"></div>
             <div id="furry" class="uno"></div>
             <div id="cuchillo" class="lejos"></div>
+            <div id="bateria"></div>
+            <div id="descarga"></div>
+            <div id="pene"></div>
         </div>
         <div id="mejoras" class="parte">
             <button id="add_cuchilla" class="btn">Añadir Cuchilla(10 euros)</button>
             <button id="mejorar_cuchillo" class="btn">mejorar Cuchillo(200 euros)</button>
-            <button id="a" class="btn">mejorar Cuchillo(10 euros)</button>
-            <button id="b" class="btn">mejorar Cuchillo(10 euros)</button>
+            <button id="electrocutar" class="btn">Electrocutar(1000 euros)</button>
+            <button id="cortasela" class="btn">Cortasela!!!(100000)</button>
             
         </div>
         <div id="estadisticas" class="parte">
